add radetali
